[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-fast-redirect"
version = "1.0.6.2"
description = "fast-redirect redirects domains."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "starlette==0.26.1",
    "uvicorn==0.17.6",
    "validators==0.20.0",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-fast-redirect"

[project.scripts]
fast-redirect = "cyberfusion.FastRedirect.server:main"
