[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-nodechup"
version = "1.4"
description = "Use nodechup to install multiple Node.js versions."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "docopt==0.6.2",
    "schema==0.7.8",
    "requests==2.32.5",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-nodechup"

[project.scripts]
nodechup = "cyberfusion.Nodechup.CLI:main"
